==> ingeniero2019/device-os/hal/src/nRF52840/usart_hal.cpp <==
#include "logging.h"
#include <nrf_uarte.h>
#include <nrf_ppi.h>
#include <nrf_timer.h>
#include "usart_hal.h"
#include "ringbuffer.h"
#include "pinmap_hal.h"
#include "check_nrf.h"
#include "gpio_hal.h"
#include <nrfx_prs.h>
#include <nrf_gpio.h>
#include <algorithm>
#include "hal_irq_flag.h"
#include "delay_hal.h"
#include "interrupts_hal.h"
#include "usart_hal_private.h"
#include "timer_hal.h"
#include "i2c_hal.h"

    int begin(const Config& conf) {
        CHECK_TRUE(isConfigured(), SYSTEM_ERROR_INVALID_STATE);
        CHECK_TRUE(validateConfig(conf.config), SYSTEM_ERROR_INVALID_ARGUMENT);
        auto nrfBaudRate = CHECK_RETURN(getNrfBaudrate(conf.baudRate), SYSTEM_ERROR_INVALID_ARGUMENT);

        AtomicSection lk;

        suspend_ = false;

        if (isEnabled()) {
            end();
        }

        nrfx_prs_acquire(uarte_, interruptHandler_);

        HAL_GPIO_Write(txPin_, 1);
        HAL_Pin_Mode(txPin_, OUTPUT);
        HAL_Pin_Mode(rxPin_, INPUT);
        HAL_Set_Pin_Function(txPin_, PF_UART);
        HAL_Set_Pin_Function(rxPin_, PF_UART);

        nrf_uarte_baudrate_set(uarte_, (nrf_uarte_baudrate_t)nrfBaudRate);
        nrf_uarte_configure(uarte_,
                conf.config & SERIAL_PARITY_EVEN ? NRF_UARTE_PARITY_INCLUDED : NRF_UARTE_PARITY_EXCLUDED,
                conf.config & SERIAL_FLOW_CONTROL_RTS_CTS ? NRF_UARTE_HWFC_ENABLED : NRF_UARTE_HWFC_DISABLED);
        nrf_uarte_txrx_pins_set(uarte_, pinToNrf(txPin_), pinToNrf(rxPin_));

        if (conf.config & SERIAL_FLOW_CONTROL_CTS) {
            HAL_Pin_Mode(ctsPin_, INPUT);
            HAL_Set_Pin_Function(ctsPin_, PF_UART);
        }

        if (conf.config & SERIAL_FLOW_CONTROL_RTS) {
            HAL_GPIO_Write(rtsPin_, 1);
            HAL_Pin_Mode(rtsPin_, OUTPUT);
            HAL_Set_Pin_Function(rtsPin_, PF_UART);
        }

        if (conf.config & SERIAL_FLOW_CONTROL_RTS_CTS) {
            uint32_t cts = NRF_UARTE_PSEL_DISCONNECTED;
            uint32_t rts = NRF_UARTE_PSEL_DISCONNECTED;
            if (conf.config & SERIAL_FLOW_CONTROL_CTS) {
                cts = pinToNrf(ctsPin_);
            }
            if (conf.config & SERIAL_FLOW_CONTROL_RTS) {
                rts = pinToNrf(rtsPin_);
            }
            nrf_uarte_hwfc_pins_set(uarte_, rts, cts);
        }

        nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_ERROR);

        nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_RXSTARTED);
        nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_RXDRDY);
        nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_RXTO);
        nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_ENDRX);

        nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_TXSTARTED);
        nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_TXDRDY);
        nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_TXSTOPPED);
        nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_ENDTX);

        disableInterrupts();

        nrf_uarte_int_enable(uarte_, NRF_UARTE_INT_ENDRX_MASK | NRF_UARTE_INT_ENDTX_MASK);

        NRFX_IRQ_PRIORITY_SET(nrfx_get_irq_number((void *)uarte_), prio_);
        NRFX_IRQ_ENABLE(nrfx_get_irq_number((void *)uarte_));

        nrf_uarte_enable(uarte_);

        config_ = conf;
        enabled_ = true;

        enableTimer();
        startReceiver();

        return SYSTEM_ERROR_NONE;
    }

    int end() {
        CHECK_TRUE(enabled_, SYSTEM_ERROR_INVALID_STATE);
        AtomicSection lk;

        suspend_ = false;

        CHECK(disable());

        // Configuring the pin mode to PIN_MODE_NONE will disconnect input buffer to enable power savings
        HAL_Pin_Mode(txPin_, PIN_MODE_NONE);
        HAL_Set_Pin_Function(txPin_, PF_NONE);
        HAL_Pin_Mode(rxPin_, PIN_MODE_NONE);
        HAL_Set_Pin_Function(rxPin_, PF_NONE);
        if (config_.config & SERIAL_FLOW_CONTROL_RTS) {
            HAL_Pin_Mode(rtsPin_, PIN_MODE_NONE);
            HAL_Set_Pin_Function(rtsPin_, PF_NONE);
        }
        if (config_.config & SERIAL_FLOW_CONTROL_CTS) {
            HAL_Pin_Mode(ctsPin_, PIN_MODE_NONE);
            HAL_Set_Pin_Function(ctsPin_, PF_NONE);
        }

        enabled_ = false;
        transmitting_ = false;
        receiving_ = 0;
        config_ = {};
        rxBuffer_.reset();
        txBuffer_.reset();

        return SYSTEM_ERROR_NONE;
    }

    int suspend() {
        CHECK_TRUE(isEnabled(), SYSTEM_ERROR_NONE);
        CHECK_FALSE(suspend_, SYSTEM_ERROR_NONE);

        flush();

        AtomicSection lk;

        // Update current available received data
        data();
        
        CHECK(disable());

        // Configuring the input pins' mode to PIN_MODE_NONE will disconnect input buffer to enable power savings
        // Configuring the output pins' mode to INPUT_PULLUP to not polluting the state on other side.
        // NOTE: Do not reset pin function!
        HAL_Pin_Mode(txPin_, INPUT_PULLUP);
        HAL_Pin_Mode(rxPin_, PIN_MODE_NONE);
        if (config_.config & SERIAL_FLOW_CONTROL_RTS) {
            HAL_Pin_Mode(rtsPin_, INPUT_PULLUP);
        }
        if (config_.config & SERIAL_FLOW_CONTROL_CTS) {
            HAL_Pin_Mode(ctsPin_, PIN_MODE_NONE);
        }

        suspend_ = true;
        enabled_ = false;
        transmitting_ = false;
        receiving_ = 0;
        rxBuffer_.prune();
        txBuffer_.reset();

        return SYSTEM_ERROR_NONE;
    }

    int restore() {
        AtomicSection lk;
        CHECK_TRUE(suspend_, SYSTEM_ERROR_NONE);
        return begin(config_);
    }

    int enableEvent(HAL_USART_Pvt_Events event) {
        if (event & HAL_USART_PVT_EVENT_READABLE) {
            if (data() <= 0) {
                nrf_uarte_int_disable(uarte_, NRF_UARTE_INT_RXDRDY_MASK);
                nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_RXDRDY);
                nrf_uarte_int_enable(uarte_, NRF_UARTE_INT_RXDRDY_MASK);
            } else {
                xEventGroupSetBits(evGroup_, HAL_USART_PVT_EVENT_READABLE);
            }
        }

        if (event & HAL_USART_PVT_EVENT_WRITABLE) {
            if (space() <= 0) {
                nrf_uarte_int_disable(uarte_, NRF_UARTE_INT_TXDRDY_MASK);
                nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_TXDRDY);
                nrf_uarte_int_enable(uarte_, NRF_UARTE_INT_TXDRDY_MASK);
            } else {
                xEventGroupSetBits(evGroup_, HAL_USART_PVT_EVENT_WRITABLE);
            }
        }

        return SYSTEM_ERROR_NONE;
    }

    int disableEvent(HAL_USART_Pvt_Events event) {
        if (event & HAL_USART_PVT_EVENT_READABLE) {
            nrf_uarte_int_disable(uarte_, NRF_UARTE_INT_RXDRDY_MASK);
            xEventGroupClearBits(evGroup_, HAL_USART_PVT_EVENT_READABLE);
        }

        if (event & HAL_USART_PVT_EVENT_WRITABLE) {
            nrf_uarte_int_disable(uarte_, NRF_UARTE_INT_TXDRDY_MASK);
            xEventGroupClearBits(evGroup_, HAL_USART_PVT_EVENT_WRITABLE);
        }

        return SYSTEM_ERROR_NONE;
    }

private:
    int disable() {
        CHECK_TRUE(enabled_, SYSTEM_ERROR_INVALID_STATE);

        disableInterrupts();
        stopTransmission();
        stopReceiver();

        nrf_uarte_disable(uarte_);
        nrf_uarte_txrx_pins_disconnect(uarte_);
        nrf_uarte_hwfc_pins_disconnect(uarte_);
        nrfx_prs_release(uarte_);

        disableTimer();

        return SYSTEM_ERROR_NONE;
    }

    void startTransmission() {
        size_t consumable;
        if (!transmitting_ && (consumable = txBuffer_.consumable())) {
            transmitting_ = true;
            auto ptr = txBuffer_.consume(consumable);
#ifdef DEBUG_BUILD
            SPARK_ASSERT(ptr);
#endif // DEBUG_BUILD
            nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_TXDRDY);
            nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_ENDTX);
            nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_TXSTOPPED);
            nrf_uarte_tx_buffer_set(uarte_, ptr, consumable);
            nrf_uarte_task_trigger(uarte_, NRF_UARTE_TASK_STARTTX);
        }
    }

    void startReceiver(bool flush = false) {
        if (receiving_ >= MAX_SCHEDULED_RECEIVALS) {
            return;
        }

        // Updates current size
        rxBuffer_.acquireBegin();

        const size_t acquirable = rxBuffer_.acquirable();
        const size_t acquirableWrapped = rxBuffer_.acquirableWrapped();
        size_t rxSize = std::max(acquirable, acquirableWrapped);

        if (rxSize < RX_THRESHOLD) {
            return;
        }

        if (RESERVED_RX_SIZE) {
            if (!flush) {
                // We should always reserve RESERVED_RX_SIZE bytes in the rx buffer
                if (rxSize == acquirable) {
                    if (acquirableWrapped < RESERVED_RX_SIZE) {
                        if (rxSize > RESERVED_RX_SIZE) {
                            rxSize -= RESERVED_RX_SIZE;
                        } else {
                            return;
                        }
                    }
                } else {
                    if (rxSize > RESERVED_RX_SIZE) {
                        rxSize -= RESERVED_RX_SIZE;
                    } else {
                        return;
                    }
                }
            } else {
                rxSize = std::min(RESERVED_RX_SIZE, rxSize);
            }
        }

        if (rxSize > 0) {
            ++receiving_;
            auto ptr = rxBuffer_.acquire(rxSize);
#ifdef DEBUG_BUILD
            SPARK_ASSERT(ptr);
#endif // DEBUG_BUILD
            nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_RXDRDY);
            nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_ENDRX);
            nrf_uarte_event_clear(uarte_, NRF_UARTE_EVENT_RXTO);
            nrf_uarte_rx_buffer_set(uarte_, ptr, rxSize);
            if (!flush) {
                nrf_uarte_task_trigger(uarte_, NRF_UARTE_TASK_STARTRX);
            } else {
                nrf_uarte_task_trigger(uarte_, NRF_UARTE_TASK_FLUSHRX);
            }
        }
    }

    static bool validateConfig(unsigned int config) {
        CHECK_TRUE((config & SERIAL_MODE) == SERIAL_8N1 ||
                   (config & SERIAL_MODE) == SERIAL_8E1 ||
                   (config & SERIAL_MODE) == SERIAL_8N2 ||
                   (config & SERIAL_MODE) == SERIAL_8E2, false);

        CHECK_TRUE((config & SERIAL_HALF_DUPLEX) == 0, false);
        CHECK_TRUE((config & LIN_MODE) == 0, false);

        // LIN-mode configuration and half-duplex pin configuration is ignored

        return true;
    }

Usart* getInstance(hal_usart_interface_t serial) {
    static Usart usartMap[] = {
        {NRF_UARTE0, uarte0InterruptHandler, UARTE0_INTERRUPT_PRIORITY, NRF_TIMER2, NRF_PPI_CHANNEL4, TX, RX, CTS, RTS},
        {NRF_UARTE1, uarte1InterruptHandler, UARTE1_INTERRUPT_PRIORITY, NRF_TIMER3, NRF_PPI_CHANNEL5, TX1, RX1, CTS1, RTS1}
    };

    CHECK_TRUE(serial < sizeof(usartMap) / sizeof(usartMap[0]), nullptr);

    return &usartMap[serial];
}
