==> particle-iot/device-os/hal/src/rtl872x/usart_hal.cpp <==
#include "logging.h"
#include "usart_hal.h"
#include "ringbuffer.h"
#include "pinmap_hal.h"
#include "gpio_hal.h"
#include <algorithm>
#include <memory>
#include "hal_irq_flag.h"
#include "delay_hal.h"
#include "interrupts_hal.h"
#include "usart_hal_private.h"
#include "timer_hal.h"
#include "service_debug.h"
#include "atomic_section.h"
#include "flash_common.h"
#include "rtl8721d.h"

    int begin(const Config& conf) {
        CHECK_TRUE(isConfigured(), SYSTEM_ERROR_INVALID_STATE);
        CHECK_TRUE(validateConfig(conf.config), SYSTEM_ERROR_INVALID_ARGUMENT);
        if (isEnabled()) {
            flush();
            end();
        }
        auto uartInstance = uartTable_[index_].UARTx;
        // Enable peripheral clock
        if (uartInstance == UART0_DEV) {
            RCC_PeriphClockCmd(APBPeriph_UART0, APBPeriph_UART0_CLOCK, ENABLE);
        }
        // Configure TX/RX pins
        if (uartInstance == UART2_DEV) {
            Pinmux_Config(hal_pin_to_rtl_pin(txPin_), PINMUX_FUNCTION_LOGUART);
            Pinmux_Config(hal_pin_to_rtl_pin(rxPin_), PINMUX_FUNCTION_LOGUART);
        } else {
            Pinmux_Config(hal_pin_to_rtl_pin(txPin_), PINMUX_FUNCTION_UART);
            Pinmux_Config(hal_pin_to_rtl_pin(rxPin_), PINMUX_FUNCTION_UART);
        }
        PAD_PullCtrl(hal_pin_to_rtl_pin(txPin_), GPIO_PuPd_NOPULL);
        PAD_PullCtrl(hal_pin_to_rtl_pin(rxPin_), GPIO_PuPd_NOPULL);
        // Configure CTS/RTS pins
        if (ctsPin_ != PIN_INVALID) {
            Pinmux_Config(hal_pin_to_rtl_pin(ctsPin_), PINMUX_FUNCTION_UART_RTSCTS);
            PAD_PullCtrl(hal_pin_to_rtl_pin(ctsPin_), GPIO_PuPd_UP);
        }
        if (rtsPin_ != PIN_INVALID) {
            Pinmux_Config(hal_pin_to_rtl_pin(rtsPin_), PINMUX_FUNCTION_UART_RTSCTS);
            PAD_PullCtrl(hal_pin_to_rtl_pin(rtsPin_), GPIO_PuPd_UP);
        }
        UART_InitTypeDef uartInitStruct = {};
        UART_StructInit(&uartInitStruct);
        uartInitStruct.RxFifoTrigLevel = UART_RX_FIFOTRIG_LEVEL_1BYTES;
        UART_Init(uartInstance, &uartInitStruct);

        RCC_PeriphClockSource_UART(uartInstance, UART_RX_CLK_XTAL_40M);
        UART_SetBaud(uartInstance, conf.baudRate);
        UART_RxCmd(uartInstance, ENABLE);

        UART_RxCmd(uartInstance, DISABLE);
        // Data bits, stop bits and parity
        if ((conf.config & SERIAL_DATA_BITS) == SERIAL_DATA_BITS_8) {
            uartInitStruct.WordLen = RUART_WLS_8BITS;
        } else {
            uartInitStruct.WordLen = RUART_WLS_7BITS;
        }
        if ((conf.config & SERIAL_STOP_BITS) == SERIAL_STOP_BITS_2) {
            uartInitStruct.StopBit = RUART_STOP_BIT_2;
        } else {
            uartInitStruct.StopBit = RUART_STOP_BIT_1;
        }
        switch (conf.config & SERIAL_PARITY) {
            case SERIAL_PARITY_ODD: {
                uartInitStruct.Parity = RUART_PARITY_ENABLE;
                uartInitStruct.ParityType = RUART_ODD_PARITY;
                break;
            }
            case SERIAL_PARITY_EVEN: {
                uartInitStruct.Parity = RUART_PARITY_ENABLE;
                uartInitStruct.ParityType = RUART_EVEN_PARITY;
                break;
            }
            default: { // ParityNone
                uartInitStruct.Parity = RUART_PARITY_DISABLE;
                break;
            }
        }
        uartInstance->LCR = ((uartInitStruct.WordLen) | (uartInitStruct.StopBit << 2) |
                             (uartInitStruct.Parity << 3) | (uartInitStruct.ParityType << 4) | (uartInitStruct.StickParity << 5));
        UART_RxCmd(uartInstance, ENABLE);

        if ((ctsPin_ != PIN_INVALID || rtsPin_ != PIN_INVALID) &&
            ((conf.config & SERIAL_FLOW_CONTROL) != SERIAL_FLOW_CONTROL_NONE)) {
            // Init CTS in low
            PAD_PullCtrl(hal_pin_to_rtl_pin(ctsPin_), GPIO_PuPd_DOWN);
            Pinmux_Config(hal_pin_to_rtl_pin(ctsPin_), PINMUX_FUNCTION_UART_RTSCTS);
            Pinmux_Config(hal_pin_to_rtl_pin(rtsPin_), PINMUX_FUNCTION_UART_RTSCTS);
            uartInstance->MCR |= BIT(5);
            uartInstance->MCR |= BIT(1);    // RTS low
        } else {
            uartInstance->MCR &= ~ BIT(5);
        }

        if (!useInterrupt()) {
            // Configuring DMA
            if (!initDmaChannels()) {
                end();
                return SYSTEM_ERROR_INTERNAL;
            }
        }
        InterruptRegister((IRQ_FUN)uartTxRxIntHandler, uartTable_[index_].IrqNum, (uint32_t)this, 5);
        InterruptEn(uartTable_[index_].IrqNum, 5);

        startReceiver();

        config_ = conf;
        state_ = HAL_USART_STATE_ENABLED;
        return SYSTEM_ERROR_NONE;
    }

    int end() {
        CHECK_TRUE(state_ != HAL_USART_STATE_DISABLED, SYSTEM_ERROR_INVALID_STATE);
        CHECK(disable());
        config_ = {};
        rxBuffer_.reset();
        txBuffer_.reset();
        curTxCount_ = 0;
        transmitting_ = false;
        receiving_ = false;
        state_ = HAL_USART_STATE_DISABLED;
        return SYSTEM_ERROR_NONE;
    }

    int suspend() {
        CHECK_TRUE(isEnabled(), SYSTEM_ERROR_INVALID_STATE);
        flush();
        // Update current available received data
        dataInFlight(true /* commit */);
        CHECK(disable(false));
        transmitting_ = false;
        receiving_ = 0;
        rxBuffer_.prune();
        txBuffer_.reset();
        curTxCount_ = 0;
        state_ = HAL_USART_STATE_SUSPENDED;
        return SYSTEM_ERROR_NONE;
    }

    int restore() {
        CHECK_TRUE(state_ == HAL_USART_STATE_SUSPENDED, SYSTEM_ERROR_INVALID_STATE);
        return begin(config_);
    }

    int enableEvent(HAL_USART_Pvt_Events event) {
        CHECK_TRUE(isEnabled(), SYSTEM_ERROR_INVALID_STATE);
        CHECK_FALSE(useInterrupt(), SYSTEM_ERROR_NOT_SUPPORTED);

        auto uartInstance = uartTable_[index_].UARTx;
        if (event & HAL_USART_PVT_EVENT_READABLE) {
            if (data() <= 0) {
                RxLock lk(this);
                UART_INTConfig(uartInstance, (RUART_IER_ERBI | RUART_IER_ELSI | RUART_IER_ETOI), ENABLE);
                UART_RXDMACmd(uartInstance, DISABLE);
                if (!receiving_) {
                    startReceiver();
                }
            } else {
                xEventGroupSetBits(evGroup_, HAL_USART_PVT_EVENT_READABLE);
            }
        }

        if (event & HAL_USART_PVT_EVENT_WRITABLE) {
            if (space() <= 0) {
                TxLock lk(this);
                UART_INTConfig(uartInstance, RUART_IER_ETBEI, ENABLE);
                // Temporarily disable TX DMA, otherwise, the TX FIFO won't be empty until all data is transferred by DMA.
                UART_TXDMACmd(uartInstance, DISABLE);
                if (!transmitting_) {
                    startTransmission();
                }
            } else {
                xEventGroupSetBits(evGroup_, HAL_USART_PVT_EVENT_WRITABLE);
            }
        }

        return SYSTEM_ERROR_NONE;
    }

    int disableEvent(HAL_USART_Pvt_Events event) {
        CHECK_TRUE(isEnabled(), SYSTEM_ERROR_INVALID_STATE);
        CHECK_FALSE(useInterrupt(), SYSTEM_ERROR_NOT_SUPPORTED);

        auto uartInstance = uartTable_[index_].UARTx;
        if (event & HAL_USART_PVT_EVENT_READABLE) {
            RxLock lk(this);
            UART_INTConfig(uartInstance, (RUART_IER_ERBI | RUART_IER_ELSI | RUART_IER_ETOI), DISABLE);
            UART_RXDMACmd(uartInstance, ENABLE);
            xEventGroupClearBits(evGroup_, HAL_USART_PVT_EVENT_READABLE);
        }

        if (event & HAL_USART_PVT_EVENT_WRITABLE) {
            TxLock lk(this);
            UART_INTConfig(uartInstance, RUART_IER_ETBEI, DISABLE);
            UART_TXDMACmd(uartInstance, ENABLE);
            xEventGroupClearBits(evGroup_, HAL_USART_PVT_EVENT_WRITABLE);
        }

        return SYSTEM_ERROR_NONE;
    }

    static Usart* getInstance(hal_usart_interface_t serial) {
        static Usart Usarts[] = {
            // NOTE: NCP should be last so that Serial1, Serial2, etc.. are contiguous.
#if PLATFORM_ID == PLATFORM_MSOM
            {3, TX,  RX,  CTS, RTS},                  // LP_UART  (Serial1)
            {2, TX1, RX1, PIN_INVALID, PIN_INVALID},  // LOG UART (Serial2)
            {0, TX2, RX2, CTS2, RTS2},                // UART0    (NCP)
#elif PLATFORM_ID == PLATFORM_TRACKERM
            {2, TX,  RX,  PIN_INVALID, PIN_INVALID},  // LOG UART (Serial1)
            {3, TX1, RX1, CTS1, RTS1},                // LP_UART  (Serial2)
            {0, TX2, RX2, CTS2, RTS2},                // UART0    (NCP)
#elif PLATFORM_ID == PLATFORM_P2
            // NOTE: P2 was already released, so existing mapping will stay the same
            {2, TX,  RX,  PIN_INVALID, PIN_INVALID},  // LOG UART (Serial1)
            {0, TX1, RX1, CTS1, RTS1},                // UART0    (Serial2)
            {3, TX2, RX2, CTS2, RTS2},                // LP_UART  (Serial3)
#else
# error "Platform unsupported"
#endif // PLATFORM_ID == PLATFORM_MSOM
        };
        CHECK_TRUE(serial < sizeof(Usarts) / sizeof(Usarts[0]), nullptr);
        return &Usarts[serial];
    }

    int disable(bool end = true) {
        CHECK_TRUE(isEnabled(), SYSTEM_ERROR_INVALID_STATE);

        auto uartInstance = uartTable_[index_].UARTx;
        if (!useInterrupt()) {
            deinitDmaChannels();
        } else {
            InterruptDis(uartTable_[index_].IrqNum);
            InterruptUnRegister(uartTable_[index_].IrqNum);
        }
        // In case events group is involved when using DMA mode.
        UART_INTConfig(uartInstance, RUART_IER_ETBEI, DISABLE);
        UART_INTConfig(uartInstance, (RUART_IER_ERBI | RUART_IER_ELSI | RUART_IER_ETOI), DISABLE);
        UART_ClearTxFifo(uartInstance);
        UART_ClearRxFifo(uartInstance);
        UART_DeInit(uartInstance);
        if (uartInstance == UART0_DEV) {
            RCC_PeriphClockCmd(APBPeriph_UART0, APBPeriph_UART0_CLOCK, DISABLE);
        }
        // Do not change the pull ability to not mess up the peer device.
        Pinmux_Config(hal_pin_to_rtl_pin(txPin_), PINMUX_FUNCTION_GPIO);
        Pinmux_Config(hal_pin_to_rtl_pin(rxPin_), PINMUX_FUNCTION_GPIO);
        if (ctsPin_ != PIN_INVALID) {
            Pinmux_Config(hal_pin_to_rtl_pin(ctsPin_), PINMUX_FUNCTION_GPIO);
        }
        if (rtsPin_ != PIN_INVALID) {
            Pinmux_Config(hal_pin_to_rtl_pin(rtsPin_), PINMUX_FUNCTION_GPIO);
        }

        // Configuring the input pins' mode to PIN_MODE_NONE will disconnect input buffer to enable power savings
        // Configuring the output pins' mode to INPUT_PULLUP to not polluting the state on other side.
        hal_gpio_mode(txPin_, end ? PIN_MODE_NONE : INPUT_PULLUP);
        hal_gpio_mode(rxPin_, PIN_MODE_NONE);
        if (config_.config & SERIAL_FLOW_CONTROL_RTS) {
            hal_gpio_mode(rtsPin_, end ? PIN_MODE_NONE : INPUT_PULLUP);
        }
        if (config_.config & SERIAL_FLOW_CONTROL_CTS) {
            hal_gpio_mode(ctsPin_, PIN_MODE_NONE);
        }
        if (end) {
            hal_pin_set_function(txPin_, PF_NONE);
            hal_pin_set_function(rxPin_, PF_NONE);
            if (config_.config & SERIAL_FLOW_CONTROL_RTS) {
                hal_pin_set_function(rtsPin_, PF_NONE);
            }
            if (config_.config & SERIAL_FLOW_CONTROL_CTS) {
                hal_pin_set_function(ctsPin_, PF_NONE);
            }
        }

        return SYSTEM_ERROR_NONE;
    }

    bool validateConfig(unsigned int config) {
        CHECK_TRUE((config & SERIAL_DATA_BITS) == SERIAL_DATA_BITS_7 ||
                   (config & SERIAL_DATA_BITS) == SERIAL_DATA_BITS_8, false);
        CHECK_TRUE((config & SERIAL_STOP_BITS) == SERIAL_STOP_BITS_1 ||
                   (config & SERIAL_STOP_BITS) == SERIAL_STOP_BITS_2, false);
        CHECK_TRUE((config & SERIAL_PARITY) == SERIAL_PARITY_NO ||
                   (config & SERIAL_PARITY) == SERIAL_PARITY_EVEN ||
                   (config & SERIAL_PARITY) == SERIAL_PARITY_ODD, false);
        CHECK_TRUE((config & SERIAL_HALF_DUPLEX) == 0, false);
        CHECK_TRUE((config & LIN_MODE) == 0, false);
        return true;
    }

    void startTransmission() {
        size_t consumable;
        auto uartInstance = uartTable_[index_].UARTx;
        if (!transmitting_ && (consumable = txBuffer_.consumable())) {
            transmitting_ = true;
            if (!useInterrupt()) {
                if (txDmaInitStruct_.GDMA_ChNum == 0xFF) {
                    transmitting_ = false;
                    return;
                }
                consumable = std::min(MAX_DMA_BLOCK_SIZE, consumable);
                auto ptr = txBuffer_.consume(consumable);

                DCache_CleanInvalidate((uint32_t)ptr, consumable);

                if (((consumable & 0x03) == 0) && (((uint32_t)(ptr) & 0x03) == 0)) {
                    // 4-bytes aligned, move 4 bytes each transfer
                    txDmaInitStruct_.GDMA_SrcMsize   = MsizeOne;
                    txDmaInitStruct_.GDMA_SrcDataWidth = TrWidthFourBytes;
                    txDmaInitStruct_.GDMA_BlockSize = consumable >> 2;
                } else {
                    // Move 1 byte each transfer
                    txDmaInitStruct_.GDMA_SrcMsize   = MsizeFour;
                    txDmaInitStruct_.GDMA_SrcDataWidth = TrWidthOneByte;
                    txDmaInitStruct_.GDMA_BlockSize = consumable;
                }
                txDmaInitStruct_.GDMA_SrcAddr = (uint32_t)(ptr);
                curTxCount_ = consumable;
                GDMA_Init(txDmaInitStruct_.GDMA_Index, txDmaInitStruct_.GDMA_ChNum, &txDmaInitStruct_);
                GDMA_Cmd(txDmaInitStruct_.GDMA_Index, txDmaInitStruct_.GDMA_ChNum, ENABLE);
            } else {
                // LOG UART doesn't support DMA transmission
                consumable = std::min(MAX_UART_FIFO_SIZE, consumable);
                auto ptr = txBuffer_.consume(consumable);
                for (size_t i = 0; i < consumable; i++, ptr++) {
                    UART_CharPut(uartInstance, *ptr);
                }
                curTxCount_ = consumable;
                UART_INTConfig(uartInstance, RUART_IER_ETBEI, ENABLE);
            }
        }
    }

    void startReceiver() {
        if (receiving_) {
            return;
        }
        receiving_ = true;
        auto uartInstance = uartTable_[index_].UARTx;
        if (!useInterrupt()) {
            if (rxDmaInitStruct_.GDMA_ChNum == 0xFF) {
                receiving_ = false;
                return;
            }
            // Updates current size
            rxBuffer_.acquireBegin();
            const size_t acquirable = rxBuffer_.acquirable();
            const size_t acquirableWrapped = rxBuffer_.acquirableWrapped();
            size_t rxSize = std::max(acquirable, acquirableWrapped);
            if (rxSize < RX_THRESHOLD) {
                receiving_ = false;
                return;
            }
            rxSize = std::min(MAX_DMA_BLOCK_SIZE, rxSize);
            // Disable Rx interrupt
            UART_INTConfig(uartInstance, (RUART_IER_ERBI | RUART_IER_ELSI | RUART_IER_ETOI), DISABLE);
            auto ptr = rxBuffer_.acquire(rxSize);

            UART_RXDMAConfig(uartInstance, 4);
            UART_RXDMACmd(uartInstance, ENABLE);

            // Configure GDMA as the flow controller
            uartInstance->MISCR &= ~(RUART_RXDMA_OWNER);
            rxDmaInitStruct_.GDMA_BlockSize = rxSize;
            rxDmaInitStruct_.GDMA_DstAddr = (uint32_t)(ptr);
            // Disable just in case, some of the settings are not applied if already enabled
            GDMA_Cmd(rxDmaInitStruct_.GDMA_Index, rxDmaInitStruct_.GDMA_ChNum, DISABLE);
            GDMA_Init(rxDmaInitStruct_.GDMA_Index, rxDmaInitStruct_.GDMA_ChNum, &rxDmaInitStruct_);
            GDMA_BurstEnable(rxDmaInitStruct_.GDMA_ChNum, DISABLE);
            // Clear UART RX FIFO read counter
            uartInstance->RX_BYTE_CNT |= RUART_RX_BYTE_CNTER_CLEAR;
            SPARK_ASSERT((uartInstance->RX_BYTE_CNT & RUART_RX_READ_BYTE_CNTER) == 0);
            GDMA_Cmd(rxDmaInitStruct_.GDMA_Index, rxDmaInitStruct_.GDMA_ChNum, ENABLE);
        } else {
            uint8_t temp[MAX_UART_FIFO_SIZE];
            uint32_t inFifo = UART_ReceiveDataTO(uartInstance, temp, MAX_UART_FIFO_SIZE, 1);
            rxBuffer_.put(temp, inFifo);
            UART_INTConfig(uartInstance, RUART_IER_ERBI | RUART_IER_ELSI | RUART_IER_ETOI, ENABLE);
        }
    }
